add storage endpoints
fix certificate pdf
