# src/storage/storage.controller.ts
@@ -1,35 +1,20 @@
 import { AzureStorageFileInterceptor, AzureStorageService, UploadedFileMetadata } from '@nestjs/azure-storage';
-import { Body, Controller, HttpCode, HttpStatus, Post, UploadedFile, UseInterceptors } from '@nestjs/common';
-import { ApiBody, ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
-import { ApplicationLoggerService } from 'src/common/services/application-logger.service';
+import { Body, Controller, Delete, Get, HttpCode, HttpStatus, Param, Post, UploadedFile, UseInterceptors } from '@nestjs/common';
+import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
+import { UploadFileDto } from './dto/upload-file.dto';
+import { StorageService } from './storage.service';
 
 @ApiTags('Storage')
 @Controller('storage')
 export class StorageController {
 
     constructor(
-        private readonly azureStorage: AzureStorageService,
-        private readonly logger: ApplicationLoggerService
+        private readonly storageService: StorageService,
+        private readonly azureStorageService: AzureStorageService,
     ) { }
 
     @ApiOperation({ summary: 'Upload a file' })
-    @ApiResponse({ status: HttpStatus.OK, description: 'The file has been successfully uploaded.'})
-    @ApiBody({
-        description: 'Request Body',
-        schema: {
-            type: 'object',
-            properties: {
-                file: {
-                    type: 'string',
-                    format: 'binary',
-                },
-                fileName: {
-                    type: 'string',
-                    nullable: true,
-                }
-            },
-        }
-    })
+    @ApiResponse({ status: HttpStatus.OK, description: 'The file has been successfully uploaded.' })
     @HttpCode(HttpStatus.OK)
     @Post('upload')
     @UseInterceptors(
@@ -38,23 +23,23 @@ export class StorageController {
     async upload(
         @UploadedFile()
         file: UploadedFileMetadata,
-        @Body('fileName') fileName: string,
+        @Body() uploadFileDto: UploadFileDto,
     ) {
-        this.logger.log('Uploading file...');
-        try {
-            const prefix = process.env.AZURE_STORAGE_FOLDER ? `${process.env.AZURE_STORAGE_FOLDER}/` : '';
-            const ext = file.originalname.split('.').at(-1);
-            const originalname = `${prefix}${new Date().getTime()}_${fileName ? fileName + ext : file.originalname}`;
-            file = {
-                ...file,
-                originalname
-            };
-            const url = await this.azureStorage.upload(file);
-            return {
-                url
-            };
-        } catch (error) {
-            this.logger.error(error.message);
-        }
+        return this.storageService.uploadFile(file, uploadFileDto, this.azureStorageService);
+    }
+
+    @Get()
+    @ApiOperation({ summary: 'Get all files' })
+    @ApiResponse({ status: HttpStatus.OK, description: 'The files have been successfully retrieved.' })
+    async getAll() {
+        return this.storageService.getAll();
+    }
+
+    @HttpCode(HttpStatus.NO_CONTENT)
+    @Delete('/:id')
+    @ApiOperation({ summary: 'Delete all files' })
+    @ApiResponse({ status: HttpStatus.OK, description: 'The files have been successfully deleted.' })
+    async deleteAll(@Param('id') id: string) {
+        return this.storageService.remove(id);
     }
 }
